--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <h1>
         <span class="accent-underline">Coming&nbsp;Soon</span>
       </h1>
-      <p class="subtitle">We’re crafting something delightful at pratibha.ai. A clean, fast experience with thoughtful purple accents—stay tuned.</p>
+      <p class="subtitle">We’re crafting something delightful at pratibha.ai —stay tuned.</p>
 
       <a class="cta" href="#" aria-label="Notify me">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
